packages/typ/tests/fixtures/diagnostics/0038_core_and_int_04.ml.expected
File "0038_core_and_int_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0038_core_and_int_04 is not a valid module name.

File "0038_core_and_int_04.ml", line 2, characters 21-22:
2 | let bad () = true && 0
                         ^
Error: The constant 0 has type int but an expression was expected of type
         bool
