packages/typ/tests/fixtures/diagnostics/0038_core_and_int_04.ml
let ( && ) (x : bool) (y : bool) : bool = x
let bad () = true && 0
